--- a/ECommerce/ECommerce.MVC/Areas/Admin/Views/Account/UpdatePassword.cshtml
+++ b/ECommerce/ECommerce.MVC/Areas/Admin/Views/Account/UpdatePassword.cshtml
@@ -4,41 +4,54 @@
     Layout = "Account/_AccountLayout";
     ViewData["Title"] = "Parola Güncelle";
 }
-@if (ViewBag.State == null)
-    {
-        <div class="login-form">
-        <form asp-area="Admin" asp-controller="Account" asp-action="UpdatePassword" method="post" class="border border-2 p-2">
-            <div class="form-group row offset-sm-2 col-sm-10 text-danger" asp-validation-summary="All">
-            </div>
-            <div class="form-group row">
-                <label asp-for="Password" class="col-sm-3 col-form-label"></label>
-                <div class="col-sm-9">
-                    <input type="password" asp-for="Password" class="form-control"/>
-                </div>
-            </div>
-            <div class="form-group row">
-                <label asp-for="RePassword" class="col-sm-3 col-form-label"></label>
-                <div class="col-sm-9">
-                    <input type="password" asp-for="RePassword" class="form-control"/>
-                </div>
-            </div>
-            <div class="form-group row">
-                <div class="offset-sm-3 col-sm-9">
-                    <input type="submit" value="Şifreyi Güncelle" class="btn btn-warning"/>
-                </div>
-            </div>
-        </form>
+<div class="login-form">
+    <form asp-area="Admin" asp-controller="Account" asp-action="UpdatePassword" method="post" class="border border-2 p-2">
+        <div class="text-danger ml-4" asp-validation-summary="All">
         </div>
-    }
-    else
-    {
-        if (ViewBag.State)
-        {
-            <div class="alert-success my-2">Şifre başarıyla güncellenmiştir.</div>
-            <div> <a asp-area="Admin" asp-controller="Home" asp-action="Index" class="btn btn-success"> Giriş</a></div>
+        <div class="form-group row">
+            <label asp-for="Password" class="col-sm-3 col-form-label"></label>
+            <div class="col-sm-9">
+                <input type="password" asp-for="Password" class="form-control"/>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label asp-for="RePassword" class="col-sm-3 col-form-label"></label>
+            <div class="col-sm-9">
+                <input type="password" asp-for="RePassword" class="form-control"/>
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="offset-sm-3 col-sm-9">
+                <input type="submit" value="Şifreyi Güncelle" class="btn btn-warning"/>
+            </div>
+        </div>
+    </form>
+</div>
+@section Scripts {
+    <script>
+    document.addEventListener("DOMContentLoaded", function() {
+        var updatePasswordMessage = '@TempData["UpdatePasswordStatus"]';
+        if(updatePasswordMessage==="False"){
+            const Toast = Swal.mixin({
+            toast: true,
+            position: 'top-end',
+            showConfirmButton: false,
+            timer: 5000,
+            timerProgressBar: true,
+            didOpen: (toast) => {
+                 toast.addEventListener('click', Swal.close)
+                 toast.addEventListener('mouseenter', Swal.stopTimer)
+                 toast.addEventListener('mouseleave', Swal.resumeTimer)
+              }
+            })
+            
+            Toast.fire({
+            icon: 'error',
+            title: 'Hata! Şifre Güncellenemedi!!!',
+            text: 'Şifreyi güncellerken beklenmeyen hatayla karşılaşıldı.Kurallara uygun şifre oluşturmayı deneyiniz!',
+            })
         }
-        else
-        {
-            <div class="alert-danger my-2">Şifreyi güncellerken beklenmeyen hatayla karşılaşıldı.Kurallara uygun şifre oluşturmayı deneyiniz</div>
-        }
-    }
+       
+});
+</script>
+}
