--- a/ECommerce/ECommerce.MVC/Areas/Admin/Views/Account/ForgetPass.cshtml
+++ b/ECommerce/ECommerce.MVC/Areas/Admin/Views/Account/ForgetPass.cshtml
@@ -4,29 +4,69 @@
     ViewBag.Title = "Parolamı Unuttum";
 }
 
-@if (ViewBag.State == null)
-{
-    <div class="login-form">
-        <form asp-area="Admin" asp-controller="Account" asp-action="ForgetPass" method="post">
-            <div asp-validation-summary="All" class="text-danger ml-4"></div>
-            <div class="form-group row">
-                <label asp-for="Email" class="col-sm-3 col-form-label"></label>
-                <div class="col-sm-9">
-                    <input type="email" asp-for="Email" class="form-control"/>
-                </div>
+<div class="login-form">
+    <form asp-area="Admin" asp-controller="Account" asp-action="ForgetPass" method="post" class="border border-2 p-2">
+        <div asp-validation-summary="All" class="text-danger ml-4"></div>
+        <div class="form-group row">
+            <label asp-for="Email" class="col-sm-3 col-form-label"></label>
+            <div class="col-sm-9">
+                <input type="email" asp-for="Email" class="form-control"/>
             </div>
-            <button type="submit" class="btn btn-info btn-flat m-b-15">Gönder</button>
-        </form>
-    </div>
-}
-else
-{
-    if (ViewBag.State)
-    {
-        <div class="alert-success my-2">Şifre talebi için e-posta adresinize bilgilerindirici mail gönderilmiştir.</div>
-    }
-    else
-    {
-        <div class="alert-danger my-2">Şifre talebi için mail gönderme işleminde hata oluştu. Lütfen mail sunucu bilgilerini kontrol ediniz!..</div>
-    }
+        </div>
+        <div class="form-group row">
+            <div class="offset-sm-3 col-sm-9">
+                <input type="submit" value="Gönder" class="btn btn-info btn-flat m-b-15"/>
+            </div>
+        </div>
+    </form>
+</div>
+@section Scripts {
+    <script>
+    document.addEventListener("DOMContentLoaded", function() {
+        var emailSendMessage = '@TempData["EmailSendStatus"]';
+        if (emailSendMessage==="True")
+        {
+            const Toast = Swal.mixin({
+            toast: true,
+            position: 'top-end',
+            showConfirmButton: false,
+            timer: 5000,
+            timerProgressBar: true,
+            didOpen: (toast) => {
+                toast.addEventListener('click', Swal.close)
+                toast.addEventListener('mouseenter', Swal.stopTimer)
+                toast.addEventListener('mouseleave', Swal.resumeTimer)
+            }
+            })
+
+            Toast.fire({
+            icon: 'success',
+            title: 'Doğrulama Maili Gönderildi.',
+            text: 'Şifre talebi için e-posta adresinize bilgilerindirici mail gönderilmiştir.',
+            })
+
+        }
+        if(emailSendMessage==="False"){
+            const Toast = Swal.mixin({
+            toast: true,
+            position: 'top-end',
+            showConfirmButton: false,
+            timer: 5000,
+            timerProgressBar: true,
+            didOpen: (toast) => {
+                 toast.addEventListener('click', Swal.close)
+                 toast.addEventListener('mouseenter', Swal.stopTimer)
+                 toast.addEventListener('mouseleave', Swal.resumeTimer)
+              }
+            })
+            
+            Toast.fire({
+            icon: 'error',
+            title: 'Doğrulama Maili Gönderilemedi!!!',
+            text: 'Şifre talebi için mail gönderme işleminde hata oluştu. Lütfen mail sunucu bilgilerini kontrol ediniz!',
+            })
+        }
+       
+});
+</script>
 }
